# mybot

./: .gitignore  AGENTS.md  LICENSE  README.md  RESUME.md  SECURITY.md  core_agent_lines.sh  dev_tasks.md  parameters.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  question---clarification.md
docs/: agent.md  channels.md  cli.md  configuration.md  cron.md  heartbeat.md  index.md  installation.md  parameters.md  providers.md  quickstart.md  restart.md  security.md  skills.md  subagent.md  tools.md  workspace.md
mybot/: __init__.py  __main__.py
mybot/agent/: context.py  loop.py  memory.py  skills.py  subagent.py
mybot/agent/tools/: cron.py  filesystem.py  mcp.py  message.py  registry.py  restart.py  shell.py  spawn.py  transcribe.py  tts.py  web.py
mybot/bus/: events.py  queue.py
mybot/channels/: __init__.py  base.py  email.py  manager.py  telegram.py
mybot/cli/: commands.py
mybot/config/: loader.py  schema.py
mybot/cron/: service.py
mybot/providers/: litellm_provider.py  openai_codex_provider.py  registry.py  transcription.py  tts.py
mybot/session/: manager.py
mybot/skills/: README.md
mybot/skills/cron/: SKILL.md
mybot/utils/: __init__.py  helpers.py  media.py  transcriber.py
tests/: test_cli_input.py  test_commands.py  test_consolidate_offset.py  test_email_channel.py  test_media.py  test_tool_validation.py
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
workspace/memory/: MEMORY.md
