[project]
name = "mybot"
version = "0.4.1.dev"
description = "A minimal bot core"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "nanobot contributors, Phimart Consulting"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "websocket-client>=1.6.0",
    "httpx>=0.25.0",
    "oauth-cli-kit>=0.1.1",
    "loguru>=0.7.0",
    "readability-lxml>=0.8.0",
    "rich>=13.0.0",
    "croniter>=2.0.0",
    "python-telegram-bot[socks]>=21.0",
    "socksio>=1.0.0",
    "msgpack>=1.0.8",
    "prompt-toolkit>=3.0.0",
    "mcp>=1.0.0",
    "json-repair>=0.30.0",
    "ddgs>=3.0.0",
    "faster-whisper>=1.0.0",
    "onnxruntime-gpu>=1.0.0",
    "kokoro>=0.9.4",
    "soundfile",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
mybot = "mybot.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mybot"]

[tool.hatch.build.targets.wheel.sources]
"mybot" = "mybot"

# Include non-Python files in skills
[tool.hatch.build]
include = [
    "mybot/**/*.py",
    "mybot/skills/**/*.md",
    "mybot/skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "mybot/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
